--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "hbs": "~4.0.0",
+    "mapbox": "^1.0.0-beta1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
