--- a/ionic/package.json
+++ b/ionic/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "capstone: An Ionic project",
   "dependencies": {
+    "chart.js": "^2.1.6",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
