--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "hbs": "~4.0.0",
+    "knex": "^0.11.7",
     "mapbox": "^1.0.0-beta1",
     "morgan": "~1.7.0",
+    "pg": "^6.0.1",
     "serve-favicon": "~2.3.0"
   }
 }
