--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mapbox": "^1.0.0-beta1",
     "morgan": "~1.7.0",
     "pg": "^6.0.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.8"
   }
 }
