--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "browserify": "^13.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
